# zkMLTrack

./: README.md  readme.md
backend/: .env-sample  .gitignore  MainController.sol  app.py  iris_test_split.csv  network.onnx  requirements.txt
frontend/: package.json  pnpm-lock.yaml
frontend/messages/: en.json  es.json
frontend/project.inlang/: project_id
frontend/src/lib/: tasks.js  var.js
frontend/src/lib/components/: app-sidebar.svelte  nav-main.svelte  nav-secondary.svelte
frontend/src/lib/components/AccountLanguageDropdown/: index.svelte
frontend/src/lib/components/AccountLanguageSelector/: index.svelte
frontend/src/lib/components/ModeSelector/: index.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/tasks/[taskId]/: +page.svelte
pruebas/: MainController.sol  package-lock.json  package.json
smartcontracts/: Cargo.toml
smartcontracts/src/: lib.rs
