[package]
name = "zkMLTrack"
version = "0.0.1"
edition = "2021"

[dependencies]
stylus-sdk = "0.7.0"
alloy-primitives = "=0.8.14"
base64ct = "=1.7.1"
ruint = "=1.16.0"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
